<resources>
    <string name="app_name">Task Perfisys</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_game_controller">Icon Game Controller</string>
    <string name="icon_menu">Icon Menu</string>
    <string name="monthly_expenses_tracker">Monthly expenses tracker</string>
    <string name="this_month">This month</string>
    <string name="past_prices">Past Prices</string>
    <string name="spent_by">Spent by:</string>
    <string name="show_expenses">Show Expenses</string>
    <string name="add_button">add button</string>
    <string name="expense_history">Expense History</string>
    <string name="rs">Rs</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="embrace_the_day_with_a_smile">Embrace the day with a smile</string>
    <string name="random_quotes">Random Quotes</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="upload_your_quotes">Upload your quotes</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About us</string>
    <string name="logout">LOGOUT</string>
</resources>