<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplitifyHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_game"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon_game_controller"
            android:src="@drawable/icon_game_controller"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon_menu"
            android:src="@drawable/icon_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/monthly_expenses_tracker"
        android:textColor="@color/splitifyPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginEnd="45dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:text="@string/this_month"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/this_month_expense_textt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    tools:text="30" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp">


            <TextView
                android:id="@+id/past_prices_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/past_prices"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/spent_by"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:textColor="@color/splitifyPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="User : 30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/show_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="75dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/show_expenses"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="8dp">

           <ImageView
               android:layout_margin="16dp"
               android:layout_width="30dp"
               android:layout_height="30dp"
               android:src="@drawable/icon_add"
               android:contentDescription="@string/add_button" />

        </com.google.android.material.card.MaterialCardView>


        <!--  <com.google.android.material.floatingactionbutton.FloatingActionButton
              android:id="@+id/floatingActionButton"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="16dp"
              android:backgroundTint="@color/white"
              android:clickable="true"
              android:src="@drawable/icon_add" />
  -->

    </LinearLayout>


</LinearLayout>